--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0",
     "uid-generator": "^1.0.0"
   },
   "devDependencies": {},
