--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='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'
